new update of bug fixes in files

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <head>
     <title>Spiderman</title>
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <div class="wraper">
     <div class="header"> 
 <h1>Spiderman Behind the Mask</h1>
 </div>
@@ -69,6 +70,6 @@ Hover to Reveal True Identy!
 </div>
 
 <div class="quest"><strong>Lastest Intel:</strong></div>
-
+</div>
 </body>
 </html>
